Partie cliente a faire pour tests des sessions

--- a/projet/client/index.html
+++ b/projet/client/index.html
@@ -1,5 +1,16 @@
-<html>
-  <body>
-    <h1>Hello world</h1>
-  </body>
+<!doctype html>
+<html lang="fr">
+
+<head>
+  <title>Liste des équipes et des joueurs</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="stylesheets/main.css" />
+  <script type="text/javascript" src="javascripts/helpers/jquery-1.10.2.min.js"></script>
+  <script type="text/javascript" src="javascripts/controllers/indexCtrl.js"></script>
+</head>
+<body>
+  <div id="conteneur">
+  <h1>Hello world</h1>
+</div>
+</body>
 </html>
